# theConspiracy

./: .gitignore  CMakeLists.txt  readme.md  settings.ini  specification.md  todo.md
maps/: city.json
src/: Bullet.cpp  Bullet.hpp  CollisionManager.cpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  EventDispatcher.cpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  RenderObject.hpp  Renderer.cpp  Room.cpp  Room.hpp  SDLException.cpp  SoundManager.cpp  Tile.cpp  Tile.hpp  Utils.cpp  main.cpp
src/cereal/: access.hpp
src/cereal/archives/: json.hpp
src/cereal/cereal/: cereal.hpp
src/cereal/details/: helpers.hpp  static_object.hpp  traits.hpp
src/cereal/types/: base_class.hpp  common.hpp
src/headers/: Bullet.hpp  CollisionManager.hpp  Constants.hpp  Enemy.hpp  Entity.hpp  EventDispatcher.hpp  Game.hpp  Player.hpp  RenderObject.hpp  Renderer.hpp  Room.hpp  SoundManager.hpp  Tile.hpp  Utils.hpp  tileson_min.hpp
src/managers/: CollisionManager.cpp  CollisionManager.hpp  Renderer.cpp  Renderer.hpp  SoundManager.cpp  SoundManager.hpp
src/utils/: SDLException.cpp  SDLException.hpp  Utils.cpp  Utils.hpp
tiled/: Laboratory.tsx  map1.json  map1.tmx  map2.json  map2.tmx  map3.json  map3.tmx  theConspiracy.tiled-session
